--- a/启用bin-log日志.ini
+++ b/启用bin-log日志.ini
@@ -12,8 +12,8 @@ lower_case_table_names=2
 collation-server = utf8_general_ci
 character-set-server = utf8
 skip-name-resolve
-
-#启用日志
+ 
+#启用日志  #show variables like 'log_%';
 log-bin=mysql-bin
 #设置日志格式 STATMENT、ROW、MIXED 
 binlog_format = mixed
